Make comparison in combining page more obvious

--- a/views/combining.ejs
+++ b/views/combining.ejs
@@ -1,46 +1,48 @@
 <% assets = { 'css' : ['sample.css'], 'js' : ['sample.js'] } %>
-<div>
- Composed by hand:
-écôlüm
- Decomposed by hand:
-écôlüm
- Done
-
- Decomposed by NFD:
-écôlüm
- ReComposed by NFC:
-écôlüm
- Done
- 
- Johann Heinrich Jürgen Böwig
- 
- (&#x0065;&#x0301;)
- (&#x0075;&#x0308;)
- 
+<div class="row">
+<div class="span5">
+ Composed by hand:<br>
+écôlüm<br>
+ Decomposed by hand:<br>
+écôlüm<br>
+ Done<br>
+<br>
+ Decomposed by NFD:<br>
+écôlüm<br>
+ ReComposed by NFC:<br>
+écôlüm<br>
+ Done<br>
+ <br>
+ Johann Heinrich Jürgen Böwig<br>
+ <br>
+ (&#x0065;&#x0301;)<br>
+ (&#x0075;&#x0308;)<br>
+ <br>
 <h1> Johann Heinrich Jürgen B&ouml;wig</h1>
 
 <h2>Johann Heinrich Jürgen Böwig</h2>
  </div>
-<div class="museo">
- Composed by hand:
-écôlüm
- Decomposed by hand:
-écôlüm
- Done
-
- Decomposed by NFD:
-écôlüm
- ReComposed by NFC:
-écôlüm
- Done
- 
- Johann Heinrich Jürgen Böwig
- 
- (&#x0065;&#x0301;)
- (&#x0075;&#x0308;)
+<div class="museo span5">
+ Composed by hand:<br>
+écôlüm<br>
+ Decomposed by hand:<br>
+écôlüm<br>
+ Done<br>
+<br>
+ Decomposed by NFD:<br>
+écôlüm<br>
+ ReComposed by NFC:<br>
+écôlüm<br>
+ Done<br>
+ <br>
+ Johann Heinrich Jürgen Böwig<br>
+ <br>
+ (&#x0065;&#x0301;)<br>
+ (&#x0075;&#x0308;)<br>
  
 <h1> Johann Heinrich Jürgen B&ouml;wig</h1>
 
 <h2>Johann Heinrich Jürgen Böwig</h2>
  
+</div>
 </div>
