Some final fixes for combining test page

--- a/views/combining.ejs
+++ b/views/combining.ejs
@@ -1,48 +1,46 @@
 <% assets = { 'css' : ['sample.css'], 'js' : ['sample.js'] } %>
 <div class="row">
 <div class="span5">
+<div class="title">Proxima Nova font:</div><br>
  Composed by hand:<br>
 écôlüm<br>
  Decomposed by hand:<br>
 écôlüm<br>
- Done<br>
 <br>
  Decomposed by NFD:<br>
 écôlüm<br>
  ReComposed by NFC:<br>
 écôlüm<br>
- Done<br>
- <br>
- Johann Heinrich Jürgen Böwig<br>
  <br>
  (&#x0065;&#x0301;)<br>
  (&#x0075;&#x0308;)<br>
  <br>
-<h1> Johann Heinrich Jürgen B&ouml;wig</h1>
-
-<h2>Johann Heinrich Jürgen Böwig</h2>
+ Johann Heinrich Jürgen B&ouml;wig (as originally entered)<br>
+ <br>
+Composed form (0xC3BC): <h2>Jürgen Böwig</h2>
+Decomposed form (0x75CC88): <h2>Jürgen Böwig</h2> 
+Entered out of order (0x75C2A8): <h2>Ju¨rgen Bo¨wig</h2> 
  </div>
+ 
 <div class="museo span5">
+<div class="title">Museo font:</div><br>
  Composed by hand:<br>
 écôlüm<br>
  Decomposed by hand:<br>
 écôlüm<br>
- Done<br>
 <br>
  Decomposed by NFD:<br>
 écôlüm<br>
  ReComposed by NFC:<br>
 écôlüm<br>
- Done<br>
- <br>
- Johann Heinrich Jürgen Böwig<br>
  <br>
  (&#x0065;&#x0301;)<br>
  (&#x0075;&#x0308;)<br>
- 
-<h1> Johann Heinrich Jürgen B&ouml;wig</h1>
-
-<h2>Johann Heinrich Jürgen Böwig</h2>
- 
+ <br>
+ Johann Heinrich Jürgen B&ouml;wig (as originally entered)<br>
+ <br>
+Composed form (0xC3BC): <h2>Jürgen Böwig</h2>
+Decomposed form (0x75CC88): <h2>Jürgen Böwig</h2> 
+Entered out of order (0x75C2A8): <h2>Ju¨rgen Bo¨wig</h2>
 </div>
 </div>
