Show random albums, get add to list working

--- a/views/partials/leaves-header.ejs
+++ b/views/partials/leaves-header.ejs
@@ -1,5 +1,5 @@
 <div id="bg">
-  <img src="img/forest-leaves.jpg" alt="">
+  <img src="<%=img('forest-leaves.jpg')%>" alt="">
 </div>
     <!-- Its dimensions and position are defined using its id selector in leaves.css -->
     <div id="leafContainer">
