Lots of fixes for assets, add about and featured photos pages

--- a/views/layout-leaves.ejs
+++ b/views/layout-leaves.ejs
@@ -30,6 +30,7 @@
     <% include ./partials/leaves-header %>
 
   <!--<div id="push"></div>-->
+  <%- include ../node_modules/shared-ui/views/partials/inject %>
 
   <!--</div>-->
 
