--- a/views/sample.ejs
+++ b/views/sample.ejs
@@ -1,16 +1,16 @@
 <% page = { 'title' : 'PAGE_TITLE', 'key': 'SAMPLE_PAGE_NAME'} %>
-<% assets = { 'css' : ['sample.css'], 'js' : ['sample.js', 'angular-1.0.3.js', 'bob.js', 'angular-1.2.0rc1.js', 'https://cdn.firebase.com/v0/firebase.js', 'http://firebase.github.io/angularFire/angularFire.js', 'angular/PhotoList/PhotoList.js', 'angular/PhotoList/PhotoService.js'] } %>
+<% assets = { 'css' : ['sample.css'], 'js' : ['sample.js', 'angular-1.0.3.js', 'https://cdn.firebase.com/v0/firebase.js', 'http://firebase.github.io/angularFire/angularFire.js', 'angular/PhotoList/PhotoList.js', 'angular/PhotoList/PhotoService.js'] } %>
 <div id="main" class="experiments">
   <div class="no-layout">
-    <h1 class="font21 serif"><%- t('sample_title')%></h1>
+    <h1 class="font21 serif"><%- i18n('sample_title')%></h1>
     <section class="basic">
       <p>
-        <%- t('sample_message')%> <img src="<%= img('icon/arrow_left_white_11x11.png') %>" alt="">
+        <%- i18n('sample_message')%> <img src="<%= img('icon/arrow_left_white_11x11.png') %>" alt="">
       </p>
     </section>
     <section class="basic">
       <h2>
-        <%- t('list_title')%> <img src="<%= img('icon/arrow_left_white_11x11.png') %>" alt="">
+        <%- i18n('list_title')%> <img src="<%= img('icon/arrow_left_white_11x11.png') %>" alt="">
       </h2>
       <div ng-app="photoList">
         <div ng-view=""></div>
